# rs-pod-macros

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
derive/: Cargo.toml
derive/examples/: builder.rs  ctor.rs  fields.rs  getters.rs  setters.rs
derive/src/: lib.rs
internal/: Cargo.toml
internal/src/: lib.rs
public/: Cargo.toml
public/src/: lib.rs
scripts/: publish.sh  run-examples.sh  set-version.sh
