[workspace]
members = ["internal", "derive", "public"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Morgan Welsch <welschmorgan@gmail.com>"]
description = "A rust tookit to deal with bureaucratic struct implementations"
license-file = "LICENSE"
readme = "README.md"
keywords = ["pod", "struct", "utils"]
repository = "https://github.com/welschmorgan/rs-podstru"
