[workspace]
members = ["internal", "derive", "public"]
resolver = "2"

[workspace.package]
license-file = "LICENSE"
keywords = ["pod", "struct", "utils"]
repository = "https://github.com/welschmorgan"
version = "0.1.1"
edition = "2021"
authors = ["Morgan Welsch <welschmorgan@gmail.com>"]
description = "A rust tookit to deal with bureaucratic struct implementations"
