[package]
name = "pod"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Bureaucratic structs to speed up rust development"

[lib]
name = "pod"

[features]
default = []
derive = ["dep:pod-derive"]

[dependencies]
pod-internal = { path = "../internal" }
pod-derive = { path = "../derive", optional = true }
