[package]
name = "podstru"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Bureaucratic structs to speed up rust development"

[lib]
name = "podstru"

[features]
default = []
derive = ["dep:podstru-derive"]

[dependencies]
podstru-internal = { path = "../internal" }
podstru-derive = { path = "../derive", optional = true }
