[package]
name = "podstru"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Bureaucratic structs to speed up rust development"

[lib]
name = "podstru"

[features]
default = []
derive = ["dep:podstru-derive"]

[dependencies]
podstru-internal = { path = "../internal", version = "0.1.0" }
podstru-derive = { path = "../derive", version = "0.1.0", optional = true }
